Fix DeckTile alignment on card details page

--- a/hsreplaynet/static/styles/components.scss
+++ b/hsreplaynet/static/styles/components.scss
@@ -363,6 +363,7 @@ table .info-icon,
 			padding-left: 40px;
 			margin: 5px 0 0 5px;
 			white-space: pre;
+			text-align: left;
 			font-size: 1em;
 			font-weight: bold;
 		}
